--- a/MISA.Fresher.Web/MISA.Fresher.Web.csproj
+++ b/MISA.Fresher.Web/MISA.Fresher.Web.csproj
@@ -13,4 +13,19 @@
     <ProjectReference Include="..\MISA.Fresher.Infracstructure\MISA.Fresher.Infracstructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
